--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ align-items: start;
 }
 
 .audio{
-    background-image: url(./img/Group\ 3.jpg);
+    background-image: url(../img/Group\ 3.jpg);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
